ATLAS-360: Szenario 14